--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,8 @@
 {
   email admin@lstolas.xyz
-  servers { protocols h1 h2 }
+  servers {
+    protocols h1 h2
+  }
 }
 
 lstolas.xyz, www.lstolas.xyz {
@@ -25,6 +27,8 @@ lstolas.xyz, www.lstolas.xyz {
   header @static Cache-Control "public, max-age=31536000, immutable"
 
   reverse_proxy app:3000 {
-    transport http { keepalive 30s }
+    transport http {
+      keepalive 30s
+    }
   }
 }
